--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@
 \section{Introduction}
 
 \paragraph{} Dans le cadre de l'unité MSH-3001, nous avons réalisé une étude
-sur les marques Citroën, et notamment la C4 Cactus et DS. Carlos Tavarez nous a
+sur les marques DS et Citroën, notamment la C4 Cactus. Carlos Tavarez nous a
 demandé de le conseiller dans sa stratégie marketing.
 
 \paragraph{} Nous avons donc sondé une centaine de personnes afin de connaître
@@ -94,14 +94,14 @@ avec la marque Citroën sur cette dernière.
 
 \paragraph{} Nous avons aussi réussi à discuter avec deux conseillers
 commerciaux de Renault et Peugeot, contrairement à des concessionnaires comme
-Citroën (pour l'instant) et Toyota qui n'ont pas trouvé le temps de nous
+Citroën et Toyota qui n'ont pas trouvé le temps de nous
 répondre du fait de la forte présence de clients.
 
 \break
 \section{Historique}
 
 \paragraph{} L'histoire récente de PSA Peugeot-Citroën est marquée par
-plusieurs bouleversements. Depuis le rachat de Citroën à Michelin en 1976, le
+plusieurs bouleversements. Depuis le rachat de Citroën par Michelin en 1976, le
 groupe doit relever le défi de faire cohabiter deux marques concurrentes. Si la
 distinction claire entre les clients Citroën et Peugeot, creusée depuis les
 années 1950, semblait être un avantage, le groupe parvint difficilement à
@@ -156,7 +156,7 @@ aussi auprès de communautés d'amateurs de voitures françaises. Si une majorit
 de retours nous sont venus du Royaume-Uni, des réponses ont aussi été données
 depuis le Brésil, la Turquie et plusieurs pays européens.\\
 
-\noindent Le total de personnes interrogées s'élève à plus de 130.
+\noindent Le total de personnes interrogées s'élève à plus de 150.
 
 \part{Résultats}
 
