--- a/main.tex
+++ b/main.tex
@@ -55,13 +55,13 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{amsmath}
 %\usepackage{fullpage}
-\usepackage{microtype}
+%\usepackage{microtype}
 \usepackage[backend=biber]{biblatex}
 \usepackage{float}
 \usepackage{csquotes}
 
 \title{Étude de marché pour les nouvelles gammes PSA Peugeot-Citroën}
-\author{Marc \textsc{Autrand}, Timothée \textsc{Pallot}, Edouard
+\author{Marc \textsc{Autrand},Timothée \textsc{Pallot}, Edouard
 	\textsc{Nguon}, Rémi \textsc{Nicole}}
 \date{11 décembre 2015}
 
@@ -558,25 +558,17 @@ incarnée par Audi et BMW notamment, car si plus de la moitié des français son
 très attirés par la première marque allemande citée, les Anglais sont eux en
 faveur de la marque française.
 
+\paragraph{}
+
 \part{Conclusion}
 
-\paragraph{} Après sa mise en vente en 2014, la Citroën C4 Cactus finit par
-n'arriver qu'à la 22ème place des voitures les plus vendues en France depuis le
-début de l'année 2015. Ce manque de réussite se traduit par un design
-complètement différent que Citroën a fait preuve. Certaines personnes aiment ce
-nouveau SUV avec les airbumps sur les cotées mais en France beaucoup pensent
-que cette originalité n'est pas agréable à regarder au vue des sondage au grand
-public. Son prix, son confort et sa technologie en fait une voiture destinée à
-des acheteurs cherchant un voiture utilitaire.
+\paragraph{} Un an après son lancement, la Citroën C4 Cactus ne se hisse qu'à la 22ème place des voitures les plus vendues en France depuis le début de l’année 2015. Ce succès mitigé peut s'expliquer en France par l'originalité du véhicule, dont le design s'éloigne des sentiers battus de Citroën. Si notre enquête a révélé que ce modèle proche des SUV rassemble de nombreux amateurs, il semble qu'il soit moins adapté au public français, moins amateur de SUV et souvent rebuté par l'aspect extérieur du véhicule et de ses \textit{airbumps}. Son prix, son confort et ses fonctionnalités en font un produit davantage destiné à des acheteurs à la recherche d'un véhicule utilitaire. Si l'objectif de Citroën était de proposer aux automobilistes français un nouveau type de véhicule quotidien, la Cactus paraît plus apte à conquérir le marché européen.
 
-\paragraph{} DS quant à elle s'est lancée sur une ligne de voiture plus haut de
-gamme de part son prix et son design. Elle incarne la voiture de luxe à la
-française et cherchent à concurrencer Audi et BMW.  Au vue du sondage, le jeune
-public ( 20-30 ans ) préfère en majorité la Audi à la DS ou à la BMW mais la
-part préfèrent la DS et la part préfèrent la BMW sont à peu près équivalentes,
-La DS peut donc vraiment rivaliser avec Audi ou BMW dans les années à venir car
-elle touche le même public recherchant le luxe ce qui du coup ne tue en aucun
-cas la marque Citroën qui propose des voitures plus bas de gamme.
+
+\paragraph{} La marque DS, quant à elle, s’est lancée sur le segment \textit{premium}, une gamme au dessus de la maison-mère Citroën ; un positionnement assumé par le prix et le design des véhicules. Elle veut incarner la voiture de luxe à la française et ainsi concurrencer les ténors européens Audi et BMW. Les résultats de nos sondages montrent que le jeune public français (20-30 ans) a plus d'affinités pour Audi que pour DS et BMW ; toutefois, il ne semble pas départager ces deux dernières. Ce constat permet de saluer une première réussite de DS, qui a su en quelques années s'approcher du niveau de popularité des marques \textit{premium} historiques. La marque s'offre ainsi les moyens de rivaliser avec Audi, BMW ou encore Lexus dans les années à venir, en profitant du renouvellement de leur public.
+
+
+\paragraph{} Toutefois, alors que le public français plébiscite la prise d'indépendance de la marque, voyant Citroën sur une toute autre gamme, les amateurs de voitures françaises à l'étranger s'étonnent davantage de ce choix. Citroën a en effet conservé, notamment au Royaume-Uni, l'image de marque dont il jouissait entre 1960 et 1990 et dont la DS fait partie intégrante. Le groupe PSA Peugeot-Citroën doit donc relever un défi de communication : affirmer DS tout en redéfinissant Citroën, l'une comme égérie du luxe à la française, l'autre comme moteur d'innovation.
 
 \printbibliography%
 
