Intro/méthode/etc.

--- a/main.tex
+++ b/main.tex
@@ -60,8 +60,8 @@
 \usepackage{float}
 \usepackage{csquotes}
 
-\title{Étude de marché pour les nouvelles gammes PSA Peugeot-Citroën}
-\author{Marc \textsc{Autrand}, Timothée \textsc{Pallot}, Edouard
+\title{\textbf{Étude de marché pour les nouvelles gammes PSA Peugeot-Citroën}}
+\author{Marc \textsc{Autrand}, Timothée \textsc{Pallot},\\*Edouard
 	\textsc{Nguon}, Rémi \textsc{Nicole}}
 \date{11 décembre 2015}
 
@@ -81,21 +81,23 @@
 
 \section{Introduction}
 
-\paragraph{} Dans le cadre de l'unité MSH-3001, nous avons réalisé une étude
-sur les marques DS et Citroën, notamment la C4 Cactus. Carlos Tavarez nous a
-demandé de le conseiller dans sa stratégie marketing.
+\paragraph{} Dans le cadre de l'unité MSH-3001, nous avons réalisé une étude du
+marché automobile, afin de répondre aux questions soulevées par la politique récente
+du groupe PSA Peugeot-Citroën ; celle de la réponse du public au nouveau modèle
+phare de Citroën, la C4 Cactus, et celle du futur de la marque DS. Quels développements
+pourront connaître ces deux marques, l'une en pleine redéfinition, l'autre à l'assaut
+d'une concurrence solidement ancrée dans les habitudes du public ?
 
-\paragraph{} Nous avons donc sondé une centaine de personnes afin de connaître
-leur avis sur la C4 Cactus: son design, ses fonctionnalités, la stratégie de
-Citroën en créant une voiture totalement différente de sa production
-habituelle. Nous avons aussi obtenu leurs avis sur la marque DS, son design
-comparé à des marques de luxe comme Audi et les conséquences de la séparation
-avec la marque Citroën sur cette dernière.
+\paragraph{} Notre enquête nous a tout d'abord amenés à discuter avec des professionnels,
+et notamment de conseillers commerciaux de marques concurrentes. Nous avons ensuite
+réalisé un sondage de plus grande ampleur auprès des clients potentiels des deux marques.
 
-\paragraph{} Nous avons aussi réussi à discuter avec deux conseillers
-commerciaux de Renault et Peugeot, contrairement à des concessionnaires comme
-Citroën et Toyota qui n'ont pas trouvé le temps de nous
-répondre du fait de la forte présence de clients.
+\paragraph{} Ce dernier a rassemblé plus de cent cinquante réponses, au sein de publics
+différents tels que le monde étudiant ou les communautés d'automobilistes. Il nous a
+permis de recueillir de nombreux commentaires sur le modèle Cactus, sur les plans fonctionnel
+et esthétique. Nous avons également obtenu l'opinion du public sur la marque DS, désormais
+indépendante, afin de de connaître le positionnement qu'il lui donne sur le
+marché haut de gamme.
 
 \break
 \section{Historique}
@@ -119,7 +121,7 @@ marché chinois, longtemps délaissé, pour lequel le prix a moins d'importance
 que la qualité du véhicule.
 
 \paragraph{} La ligne DS est un succès. Pour autant, sa communication l'éloigne
-de Citroën ; puis, en 2014, le groupe PSA choisit d'en faire une filiale à part
+peu à peu de Citroën ; en 2014, le groupe PSA choisit d'en faire une filiale à part
 entière. Ne reste alors plus à Citroën que sa seconde spécialité, celle de
 faire du différent. Elle présente ainsi au même moment un modèle d'un genre
 nouveau, entre la berline et le SUV, et doté d'un design particulier : la C4
@@ -130,7 +132,7 @@ Citroën.
 renouant dès le premier semestre 2015 avec les bénéfices\cite{lesechos}, le
 futur est plus incertain. La C4 Cactus est un modèle clivant qui rassemble de
 nombreux fans mais souffre d'un manque de reconnaissance du grand public. La
-gamme DS, quant à elle, prend son envol en Chine et devient le porte-étendard
+gamme DS, quant à elle, prend son envol en Chine et veut devenir le porte-étendard
 du groupe.\\
 
 \noindent \emph{Quel développement peuvent connaître ces deux gammes, et
@@ -139,20 +141,27 @@ du groupe.\\
 \break
 \section{Méthodologie}
 
-\paragraph{} Afin de réaliser notre étude, nous sommes allés rencontrer des
-concessionnaires comme Peugeot et Renault afin d'avoir l'avis personnel de
-conseillers commerciaux. Pour élargir notre champ de recherche, nous avons
-aussi créé un sondage qui nous avons fait passer dans des réseaux sociaux comme
-Facebook afin d'avoir des avis divers et variés venant de catégories de
-personnes différentes.
+\paragraph{} Dans les premiers moments de notre étude, nous avons souhaité recueillir
+l'avis de plusieurs concessionnaires. Nous avons ainsi pu nous entretenir avec des
+conseillers commerciaux issus de magasins Peugeot et Renault ; ceux-ci représentent
+respectivement une concurrence indirecte et directe pour Citroën et DS. Ces échanges,
+basés sur un premier questionnaire, étaient informels, afin de connaître l'avis personnel
+de ces employés.
+
+\paragraph{} Afin de recueillir le sentiment du public, nous avons enrichi notre
+questionnaire en vue d'une publication sous forme de sondage en ligne. Il était
+important d'y ajouter des éléments de contexte ainsi que des illustrations, afin que
+les internautes moins familiers des gammes Citroën et DS puissent également nous donner
+leur opinion. Le sondage a été partagé sur les réseaux sociaux auprès des communautés Citroën,
+puis auprès d'un large panel d'étudiants qui représentent le public futur des deux marques.
 
 \paragraph{} Le positionnement de la Cactus, proche des SUV, lui donnant plus
 de chances de trouver un public à l'étranger qu'en France, nous avons également
 cherché des retours à l'international. Cette décision était confortée par les
 prix reçus par le véhicule : voiture de l'année en Espagne et au Danemark, prix
-du design de New York, etc. Nous avons ainsi réalisé une version du
-sondage en langue anglaise, afin de la partager sur les réseaux sociaux mais
-aussi auprès de communautés d'amateurs de voitures françaises. Si une majorité
+du design du salon de l'automobile New York, etc. Nous avons ainsi rédigé une version du
+sondage en langue anglaise, qui a reçu plus de trente réponses dans des communautés
+internationales d'amateurs de voitures françaises. Si une majorité
 de retours nous sont venus du Royaume-Uni, des réponses ont aussi été données
 depuis le Brésil, la Turquie et plusieurs pays européens.\\
 
@@ -240,7 +249,7 @@ social. En termes de prix, la Citroën Cactus se positionne entre voitures ``low
 cost'' et voitures haut de gamme. En effet, son prix peut varier entre 15 200 €
 et 22 900 € à neuf selon la finition et le moteur pris\cite{banquette}.
 
-\subsection{Citroën DS}
+\subsection{Ligne DS}
 
 \paragraph{} La marque DS s'est véritablement lancée avec la DS3 en 2010 qui a
 été vendue en 26 417 exemplaires cette même année, 33 015 l'année suivante,
@@ -477,7 +486,7 @@ fonctionnalités est trop faible.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/buy_fr-1} \caption[Proportion personnes ayant répondu au sondage français qui achèteraient une C4 Cactus]{Proportion personnes ayant répondu au sondage français qui achèteraient une C4 Cactus}\label{fig:buy fr}
+\includegraphics[width=\maxwidth]{figure/buy_fr-1} \caption[Proportion des personnes ayant répondu au sondage français et envisageant l'achat d'une C4 Cactus]{Proportion des personnes ayant répondu au sondage français et envisageant l'achat d'une C4 Cactus}\label{fig:buy fr}
 \end{figure}
 
 
@@ -485,7 +494,7 @@ fonctionnalités est trop faible.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/buy_en-1} \caption[Proportion personnes ayant répondu au sondage anglais qui achèteraient une C4 Cactus]{Proportion personnes ayant répondu au sondage anglais qui achèteraient une C4 Cactus}\label{fig:buy en}
+\includegraphics[width=\maxwidth]{figure/buy_en-1} \caption[Proportion des personnes ayant répondu au sondage anglais et envisageant l'achat d'une C4 Cactus]{Proportion des personnes ayant répondu au sondage anglais et envisageant l'achat d'une C4 Cactus}\label{fig:buy en}
 \end{figure}
 
 
@@ -500,7 +509,7 @@ que 94\% des étrangers sondés feraient aussi ce choix.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/ds_know_fr-1} \caption[Proportion personnes ayant répondu au sondage français sachant que DS était une marque indépendante]{Proportion personnes ayant répondu au sondage français sachant que DS était une marque indépendante}\label{fig:ds know fr}
+\includegraphics[width=\maxwidth]{figure/ds_know_fr-1} \caption[Proportion des personnes ayant répondu au sondage français et sachant que DS est une marque indépendante]{Proportion des personnes ayant répondu au sondage français et sachant que DS est une marque indépendante}\label{fig:ds know fr}
 \end{figure}
 
 
@@ -508,7 +517,7 @@ que 94\% des étrangers sondés feraient aussi ce choix.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/ds_know_en-1} \caption[Proportion personnes ayant répondu au sondage anglais sachant que DS était une marque indépendante]{Proportion personnes ayant répondu au sondage anglais sachant que DS était une marque indépendante}\label{fig:ds know en}
+\includegraphics[width=\maxwidth]{figure/ds_know_en-1} \caption[Proportion des personnes ayant répondu au sondage anglais sachant que DS est une marque indépendante]{Proportion des personnes ayant répondu au sondage anglais et sachant que DS est une marque indépendante}\label{fig:ds know en}
 \end{figure}
 
 
@@ -558,7 +567,7 @@ incarnée par Audi et BMW notamment, car si plus de la moitié des français son
 très attirés par la première marque allemande citée, les Anglais sont eux en
 faveur de la marque française.
 
-\paragraph{}
+\break
 
 \part{Conclusion}
 
